fix responsive + custom cursor disappear on mobile device + generic fixes

--- a/styles.css
+++ b/styles.css
@@ -372,7 +372,7 @@ a:hover {
 .item-container {
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
+    height: 88%;
     background-color: #FFD42D70;
     border: 4px dashed #fff;
     align-content: baseline;
@@ -586,7 +586,11 @@ img {
     #spin {
         font-size: 18px;
     }
-
+    
+    #pagina4 {
+        height: auto;
+    }
+    
     #presentazione {
         font-size: 3.75vmax;
     }
@@ -605,7 +609,7 @@ img {
 
     #container-contact {
         flex-direction: column;
-        margin-top: 45%;
+        /* margin-top: 45%; */
         margin-bottom: 15%;
     }
   
@@ -676,7 +680,11 @@ img {
     }
 
     #work-container {
-        margin-top: 10%;
+        margin-top: 15%;
+    }
+
+    #pagina4 {
+        height: auto;
     }
 
     #presentazione {
